using System.ComponentModel.DataAnnotations.Schema;

namespace Contract.Common;

public class BaseAuditableEntity : BaseEntity
{
    public DateTime CreatedAt { get; set; }
    public DateTime UpdatedAt { get; set; }
}
