@startuml
hide circle
skinparam classAttributeIconSize 0

class BaseApiController {
    #_sender: ISender
    #_httpContextAccessor: HttpContextAccessor
}

class ConversationController {
    +GetMemberListByConversationId(GetMemberListByConversationIdDTO getMemberListByConversationIdDTO): async Task<IActionResult>
}

class GetMemberListByConversationIdQuery{
    +UserId: Guid
    +ConversationId: Guid
    +Other: bool
}

class GetMemberListByConversationIdQueryHandler{
    -_context: IApplicationDbContext
    +Handle(GetMemberListByConversationIdQuery request, CancellationToken cancellationToken): async Task<Result<List<ConversationUser>?>>
}

class IApplicationDbContext {
    +Conversations: DbSet<Conversation>
    +GroupConversation: DbSet<GroupConversation>
    +ConversationUsers: DbSet<ConversationUser>
    +Messages: DbSet<Message>
}

class ApplicationDbContext {
    +Conversations: DbSet<Conversation>
    +GroupConversation: DbSet<GroupConversation>
    +ConversationUsers: DbSet<ConversationUser>
    +Messages: DbSet<Message>
    #OnConfiguring(DbContextOptionsBuilder optionsBuilder): void
}

class Result {
    +bool IsFailure
    +bool IsSuccess
    +IEnumerable<Error> Errors
    #Result(bool isSuccess, IEnumerable<Error> errors)
    #Result(bool isSuccess, Error error)
    +ThrowIfFailure(): void
    {static} +Success(): Result
    {static} +Failure(Error err): Result
    {static} +Failure(IEnumerable<Error> errs): Result
}

class "Result<T>" {
    +T Value
    {static} +Success(T value): Result<T>
    {static} +Failure(Error error): Result<T?>
    {static} +Failure(IEnumerable<Error> errs): Result<T?>
}

class Error {
    {static} +None: Error
    {static} +implicit operator Result(Error err): Result
}

class GetMemberListByConversationIdDTO{
    +ConversationId: Guid
    +Other: bool
}

class ConversationError{
    {static} +NotFound: Error
    {static} +AlreadyExistConversation: Error
}

class BaseEntity {
    +Guid Id
}

class BaseAuditableEntity{
    +DateTime CreatedAt
    +DateTime UpdatedAt
}

class Conversation {
    +Type: string
    +Users: List<ConversationUser>
}

class GroupConversation {
    +Name: string
    +ImageURL: string?
    +InviteURL: string?
}

class ConversationUser {
    +ConversationId: Guid
    +UserId: Guid
    +Role: string
    +ReadTime: DateTime?
    +Conversation: Conversation
}

class Message {
    +SenderId: Guid?
    +ConversationId: Guid
    +Content: string
    +Source: string
    +AttachedFilesURL: string?
    +Active: bool?
    +Conversation: Conversations
}

interface "IRequest<TResponse>"
interface "IRequestHandler<TRequest, TResponse>"{
    Handle(TRequest request, CancellationToken cancellationToken): Task<TResponse>
}

ConversationController --|> BaseApiController
ConversationController "1" --"1..*" GetMemberListByConversationIdQuery

ConversationController "1" --"1..*" GetMemberListByConversationIdDTO

GetMemberListByConversationIdQuery ..|> "IRequest<TResponse>"
GetMemberListByConversationIdQueryHandler ..|> "IRequestHandler<TRequest, TResponse>"
GetMemberListByConversationIdQueryHandler "1" --"1..*" GetMemberListByConversationIdQuery
GetMemberListByConversationIdQueryHandler "1" --"1..*" ConversationUser
GetMemberListByConversationIdQueryHandler "1" --"1..*" Result
GetMemberListByConversationIdQueryHandler "1" o--"1..*" IApplicationDbContext
GetMemberListByConversationIdQueryHandler "1" --"1..*" ConversationError

IApplicationDbContext <|.. ApplicationDbContext
Result "1" --"1..*" Error
Result <|-- "Result<T>"
ConversationError "1" --"1..*" Error

ApplicationDbContext "1" o--"1..*" Conversation
ApplicationDbContext "1" o--"1..*" GroupConversation
ApplicationDbContext "1" o--"1..*" ConversationUser
ApplicationDbContext "1" o--"1..*" Message

Conversation --|> BaseAuditableEntity
GroupConversation --|> Conversation
ConversationUser --|> BaseEntity
ConversationUser --*"1..*" Conversation
Message --|> BaseAuditableEntity
Message --*"1..*" Conversation
BaseAuditableEntity --|> BaseEntity
@enduml